tests/positive/exceptions/exception_throw_init/input.ci
void main() {
    try {
        throw clone RuntimeException("boom");
    } catch (RuntimeException re) {
        print(re.message + "\n");
    }
}
