tests/negative/lexical/malformed_unicode_escape/input.ci
void main() {
    print("\u12G4\n");
}
